rebrand to Cooper Ransom and update related metadata

--- a/src/app.html
+++ b/src/app.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title id="page-title">JARBREAKER</title>
+    <title id="page-title">Cooper Ransom</title>
     <link
       rel="preconnect"
       href="https://fonts.googleapis.com" />
@@ -42,10 +42,10 @@
       content="en" />
     <link
       rel="canonical"
-      href="https://JARBREAKER.cc" />
+      href="https://cooperransom.cc" />
     <meta
       property="og:title"
-      content="JARBREAKER" />
+      content="Cooper Ransom" />
     <meta
       property="og:description"
       content="16 year old bedroom DJ and software developer from North Carolina." />
@@ -54,7 +54,7 @@
       content="/icon.png" />
     <meta
       property="og:url"
-      content="https://JARBREAKER.cc" />
+      content="https://cooperransom.cc" />
     <meta
       property="og:type"
       content="website" />
@@ -63,7 +63,7 @@
       content="summary" />
     <meta
       name="twitter:title"
-      content="JARBREAKER" />
+      content="Cooper Ransom" />
     <meta
       name="twitter:description"
       content="16 year old bedroom DJ and software developer from North Carolina." />
@@ -72,7 +72,7 @@
       content="/icon.png" />
     <meta
       name="twitter:url"
-      content="https://JARBREAKER.cc" />
+      content="https://cooperransom.cc" />
     <meta
       name="robots"
       content="index, follow" />
@@ -80,8 +80,8 @@
       {
         "@context": "https://schema.org",
         "@type": "WebApplication",
-        "name": "JARBREAKER",
-        "url": "https://JARBREAKER.cc",
+        "name": "Cooper Ransom",
+        "url": "https://cooperransom.cc",
         "description": "16 year old bedroom DJ and software developer from North Carolina.",
         "applicationCategory": "Music",
         "operatingSystem": "Web Browser"
